@@ -16,6 +16,9 @@ Release 1.1.2 - 2012.11.18
     MAPREDUCE-2374. "Text File Busy" errors launching MR tasks. (Andy Isaacson
     via atm)
 
+    HDFS-4208. NameNode could be stuck in SafeMode due to never-created
+    blocks. (Brandon Li via suresh)
+
 Release 1.1.1 - 2012.11.18
 
   INCOMPATIBLE CHANGES
